[package]
name = "terminal-io"
version = "0.14.0"
description = "Utilities for reading and writing on terminals"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["cli", "io"]
categories = ["command-line-interface"]
repository = "https://github.com/sunfishcode/terminal-io"
exclude = ["/.github"]

[dependencies]
io-extras = "0.15.0"
duplex = "0.13.0"
io-lifetimes = { version = "0.7.0", default-features = false }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.35.6", features = ["mm"] }
terminfo = "0.7.3"

[target.'cfg(windows)'.dependencies]
is-terminal = "0.3.0"
