[package]
name = "terminal-io"
version = "0.19.3"
description = "Utilities for reading and writing on terminals"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["cli", "io"]
categories = ["command-line-interface"]
repository = "https://github.com/sunfishcode/terminal-io"
exclude = ["/.github"]

[dependencies]
io-extras = "0.18.0"
duplex = "0.16.0"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.0", features = ["mm", "termios"] }
terminfo = "0.9.0"

[target.'cfg(windows)'.dependencies]
is-terminal = "0.4.0"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(bench)',
    'cfg(read_initializer)',
    'cfg(can_vector)',
    'cfg(clamp)',
    'cfg(extend_one)',
    'cfg(pattern)',
    'cfg(seek_stream_len)',
    'cfg(shrink_to)',
    'cfg(toowned_clone_into)',
    'cfg(try_reserve)',
    'cfg(unix_socket_peek)',
    'cfg(windows_by_handle)',
    'cfg(write_all_vectored)',
    'cfg(windows_file_type_ext)',
]
